--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
              <br><br><br>Para contactarme lo podes hacer en las siguientes opciones
 
              <div class="redes">
-                <div class="redes"><img width="50px" src="Linkedin.png" alt="Logo_Linkedin"><a href="https://linkedin.com/in/santiago-g-maldonado">Linkedin</a></div>
-                <div class="redes"><img width="50px" src="WhatsApp.png" alt="Logo_WhatsApp"><a href="https://api.whatsapp.com/send/?phone=1167924990&text&type=phone_number&app_absent=0"> WhatsApp</a></div>
-                <div class="redes"><img width="50px" src="Telefono.png" alt="Logo_Telefono">1167924990</div>
-                <div class="redes"><img width="50px" src="Instagram.png" alt="LogoInstagram"><a href="https://www.instagram.com/santigmaldonado/">Instagram</a></div>
+                <div class="redes"><img width="50px" src="linkedin.png" alt="Logo_Linkedin"><a href="https://linkedin.com/in/santiago-g-maldonado">Linkedin</a></div>
+                <div class="redes"><img width="50px" src="Whatsapp.png" alt="Logo_WhatsApp"><a href="https://api.whatsapp.com/send/?phone=1167924990&text&type=phone_number&app_absent=0"> WhatsApp</a></div>
+                <div class="redes"><img width="50px" src="telefono.png" alt="Logo_Telefono">1167924990</div>
+                <div class="redes"><img width="50px" src="instagram.png" alt="LogoInstagram"><a href="https://www.instagram.com/santigmaldonado/">Instagram</a></div>
              </div>
          </section>
     </footer>
